--- a/style.css
+++ b/style.css
@@ -53,7 +53,8 @@ body {
     height: 2rem;
     border: none;
     border-radius: 10px;
-    padding-left: 25px;
+    padding-left: 15px;
+    text-indent: 10px;
     text-transform: capitalize;
     background-image: url(./img/search_icon.png);
     background-repeat: no-repeat;
