--- a/style.css
+++ b/style.css
@@ -17,6 +17,8 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
+/* Nav */
+
 .navbar {
     position: fixed;
     top: 0;
@@ -102,4 +104,85 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     border-radius: 50%;
+}
+
+/* Main */
+
+.main {
+    width: 100%;
+    padding: 2.5rem 0;
+    display: flex;
+    justify-content: center;
+    margin-top: 3rem;
+}
+
+.container {
+    width: 70%;
+    max-width: 62rem;
+    display: grid;
+    grid-template-columns: 60% 40%;
+    gap: 2rem;
+}
+
+.left_side {
+    display: flex;
+    flex-direction: column;
+}
+
+.status_container {
+    width: 100%;
+    height: 7.5rem;
+    background: #fff;
+    border: 1px solid #dfdfdf;
+    border-radius: 2px;
+    padding: 0.6rem;
+    padding-right: 0;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+    overflow-x: auto;
+}
+
+.status_container::-webkit-scrollbar{
+    display: none;
+}
+
+.status {
+    flex: 0 0 auto;
+    width: 5rem;
+    height: 5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-right: 0.9rem;
+}
+
+.profile_img {
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    overflow: hidden;
+    padding: 0.1rem;
+    background: linear-gradient(45deg, rgb(255, 230, 0), rgb(255, 0, 128) 80%);
+}
+
+.profile_img:hover {
+    transform: scale(0.98);
+}
+
+.profile_img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 2px solid #fff;
+}
+
+.username {
+    width: 100%;
+    overflow: hidden;
+    text-align: center;
+    font-size: 0.75rem;
+    margin-top: 0.3rem;
+    color: rgba(0, 0, 0, 0.5);
 }
