--- a/style.css
+++ b/style.css
@@ -193,4 +193,129 @@ body {
     background: #fff;
     border: 1px solid #dfdfdf;
     margin-top: 2.5rem;
+    border-radius: 15px;
+}
+
+.info {
+    width: 100%;
+    height: 3.75rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 1.25rem;
+}
+
+.info .username {
+    width: auto;
+    font-weight: bold;
+    color: #000;
+    font-size: 0.9rem;
+    margin-left: 0.6rem;
+}
+
+.info .options {
+    height: 1rem;
+    cursor: pointer;
+}
+
+.info .user-post {
+    display: flex;
+    align-items: center;
+}
+
+.info .profile_img {
+    height: 2.5rem;
+    width: 2.5rem;
+    padding: 0;
+    background: none;
+}
+
+.info .profile_img img {
+    border: none;
+}
+
+.post_img {
+    width: 100%;
+    height: 31rem;
+    object-fit: cover;
+}
+
+.post_container {
+    width: 100%;
+    padding: 1.25rem;
+}
+
+.like {
+    font-weight: bold;
+}
+
+.des {
+    margin: 0.6rem 0;
+    font-size: 0.9rem;
+    line-height: 1.25rem;
+}
+
+.des span {
+    font-weight: bold;
+    margin-right: 0.6rem;
+}
+
+.time {
+    color: rgba(0, 0, 0, 0.5);
+    font-size: 0.75rem;
+}
+
+.comment_container {
+    width: 100%;
+    height: 3rem;
+    border-top: 1px solid #dfdfdf;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.comment_container .icon {
+    height: 1.5rem;
+    margin: auto;
+    opacity: 0.8;
+}
+
+.comment { 
+    width: 80%;
+    height: 100%;
+    border: none;
+    outline: none;
+    font-size: 0.9rem;
+}
+
+.add_comment, 
+.action_btn {
+    width: 4rem;
+    height: 100%;
+    background: none;
+    border: none;
+    outline: none;
+    text-transform: capitalize;
+    font-size: 1rem;
+    color: rgb(0, 162, 255);
+    opacity: 0.5;
+}
+
+.reaction {
+    width: 100%;
+    height: 3rem;
+    display: flex;
+    margin-top: -1.25rem;
+    align-items: center;
+}
+
+.reaction .icon {
+    height: 1.5rem;
+    font-size: 1.5rem;
+    margin: 0;
+    margin-right: 1.25rem;
+}
+
+.reaction .icon.save {
+    margin-left: auto;
 }
