--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ body {
     height: 7.5rem;
     background: #fff;
     border: 1px solid #dfdfdf;
-    border-radius: 2px;
+    border-radius: 15px;
     padding: 0.6rem;
     padding-right: 0;
     display: flex;
@@ -276,8 +276,9 @@ body {
 
 .comment_container .icon {
     height: 1.5rem;
-    margin: auto;
     opacity: 0.8;
+    margin: 0 10px;
+    top: 0;
 }
 
 .comment { 
@@ -318,4 +319,83 @@ body {
 
 .reaction .icon.save {
     margin-left: auto;
+}
+
+.right_side {
+    padding: 1.25rem;
+}
+
+.profile-card {
+    width: fit-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 0.6rem;
+}
+
+.profile-card .profile_img {
+    flex: 0 0 auto;
+    padding: 0;
+    background: none;
+    width: 2.5rem;
+    height: 2.5rem;
+    margin-right: 0.6rem;
+}
+
+.profile-card:first-child .profile_img {
+    width: 4rem;
+    height: 4rem;
+}
+
+.profile-card .profile_img img {
+    border: none;
+}
+
+.profile-card .username {
+    font-weight: 500;
+    font-size: 0.9rem;
+    color: #000;
+}
+
+.info_text {
+    color: rgba(0, 0, 0, 0.5);
+    font-size: 0.75rem;
+    font-weight: 500;
+    margin-top: 0.3rem;
+}
+
+.action_btn {
+    opacity: 1;
+    font-weight: 700;
+    font-size: 0.75rem;
+}
+
+.sug_text {
+    font-size: 0.9rem;
+    color: rgba(0, 0, 0, 0.5);
+    font-weight: 700;
+    margin: 1.25rem 0;
+}
+
+@media (max-width: 1100px) {
+    .right_side, .search_input {
+        display: none;
+    }
+    .nav_container, .container {
+        width: 90%;
+    }
+
+    .container {
+        display: block;
+    }
+}
+
+@media (max-width: 500px) {
+    .nav_icon .fa-solid {
+        font-size: 1rem;
+        margin: 0 0.3rem;
+    }
+    .post_img {
+        height: 19rem;
+    }
 }
