--- a/style.css
+++ b/style.css
@@ -300,6 +300,12 @@ body {
     font-size: 1rem;
     color: rgb(0, 162, 255);
     opacity: 0.5;
+    cursor: pointer;
+}
+
+.add_comment:hover, 
+.action_btn:hover {    
+    filter: brightness(1.2);
 }
 
 .reaction {
@@ -315,6 +321,7 @@ body {
     font-size: 1.5rem;
     margin: 0;
     margin-right: 1.25rem;
+    cursor: pointer;
 }
 
 .reaction .icon.save {
