--- a/style.css
+++ b/style.css
@@ -10,17 +10,12 @@
     box-sizing: border-box;
 }
 
-::-webkit-scrollbar {
-    display: none;
-  }
-
 body {
-    -ms-overflow-style: none;
-    scrollbar-width: none;
     position: relative;
     width: 100vw;
     background-color: whitesmoke;
     font-family: 'Roboto', sans-serif;
+    overflow-y: overlay;
 }
 
 /* Nav */
@@ -282,7 +277,6 @@ body {
 
 .comment_container .icon {
     height: 1.5rem;
-    opacity: 0.8;
     margin: 0 10px;
     top: 0;
 }
@@ -305,7 +299,6 @@ body {
     text-transform: capitalize;
     font-size: 1rem;
     color: rgb(0, 162, 255);
-    opacity: 0.5;
     cursor: pointer;
 }
 
@@ -410,5 +403,8 @@ body {
     }
     .post_img {
         height: 19rem;
+    }
+    .brand p {
+        font-size: 2rem;
     }
 }
